added dummy setings page

--- a/views/userProfile/userProfile.ejs
+++ b/views/userProfile/userProfile.ejs
@@ -50,7 +50,7 @@
         <h1 title="Name"><%= searchUser.name %></h1>
         <h3 title="Username"><%= searchUser.username %></h3>
         <% if(isSameUser) {%>
-        <button class="edit-profile-button btn btn-warning">
+        <button class="edit-profile-button btn btn-warning" id="settings">
           <i class="fa fa-pencil" aria-hidden="true"></i> Edit Profile
         </button>
         <% } %>
