--- a/views/navbar/authNavbar.ejs
+++ b/views/navbar/authNavbar.ejs
@@ -57,7 +57,9 @@
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         <a class="dropdown-item" href="/user/<%= user.username %>">Profile</a>
-        <a class="dropdown-item" href="/settings">Settings</a>
+        <a class="dropdown-item" href="/user/<%= user.username %>/#settings"
+          >Settings</a
+        >
         <div class="dropdown-divider"></div>
         <form action="/logout" method="post">
           <input type="submit" class="dropdown-item" value="Log Out" />
