fix responsive problem

--- a/views/navbar/unAuthNavbar.ejs
+++ b/views/navbar/unAuthNavbar.ejs
@@ -1,4 +1,13 @@
-<div class="ml-auto">
-  <a href="/login" class="btn btn-primary mr-2 rounded">Login</a>
-  <a href="/signup" class="btn btn-success">SignUp</a>
-</div>
+<nav
+  class="main-mav-bar navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top "
+>
+  <div class="container">
+    <a class="navbar-brand" href="/"
+      ><img class="logo" src="/photos/logo.png" alt="Adda Golpo"
+    /></a>
+    <div class="ml-auto">
+      <a href="/login" class="btn btn-primary mr-2 rounded">Login</a>
+      <a href="/signup" class="btn btn-success">SignUp</a>
+    </div>
+  </div>
+</nav>
