--- a/views/navbar/authNavbar.ejs
+++ b/views/navbar/authNavbar.ejs
@@ -1,70 +1,163 @@
-<div class="authNavbar">
-  <div class="search-bar">
-    <form style="flex: 1;" action="/search" method="get">
-      <div class="input-group">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Search your friend"
-          name="user"
-          value="<%= typeof(searchName) !== 'undefined' ? searchName : '' %>"
-          required
-        />
-        <div class="input-group-append">
-          <button type="submit" class="btn btn-primary">Search</button>
-        </div>
-      </div>
-    </form>
-  </div>
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="/">
-        <i class="fa fa-home" aria-hidden="true"></i>
-        <br />
-        <span class="p-0 m-0">Home</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/friend_request"
-        ><i class="fa fa-users" aria-hidden="true"></i>
-        <br />
-        <span class="p-0 m-0">Friend Request </span>
-        <% if(user.friendRequest.length){ %>
-        <span style="background: red;" class="badge badge-dark"
-          ><%= user.friendRequest.length%></span
-        >
-        <% } %>
-      </a>
-    </li>
-
-    <li class="nav-item  dropdown">
-      <a
-        class="nav-link dropdown-toggle"
-        href="/<%= user.username %>"
-        id="navbarDropdown"
-        role="button"
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-        <img
-          class="navbarPhoto"
-          src="<%= user.photoLink %>"
-          alt="<%=user.name%>"
-        />
-        <br />
-        <span class="p-0 m-0"><%= user.name %></span>
-      </a>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="/user/<%= user.username %>">Profile</a>
-        <a class="dropdown-item" href="/user/<%= user.username %>/#settings"
-          >Settings</a
-        >
-        <div class="dropdown-divider"></div>
-        <form action="/logout" method="post">
-          <input type="submit" class="dropdown-item" value="Log Out" />
+<nav
+  class="main-mav-bar navbar navbar-expand-sm navbar-light bg-light shadow-sm fixed-top desktop-nav"
+>
+  <div class="container">
+    <a class="navbar-brand" href="/"
+      ><img class="logo" src="/photos/logo.png" alt="Adda Golpo"
+    /></a>
+    <div class="authNavbar">
+      <div class="search-bar">
+        <form style="flex: 1;" action="/search" method="get">
+          <div class="input-group">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Search your friend"
+              name="user"
+              value="<%= typeof(searchName) !== 'undefined' ? searchName : '' %>"
+              required
+            />
+            <div class="input-group-append">
+              <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+          </div>
         </form>
       </div>
-    </li>
-  </ul>
-</div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/">
+            <i class="fa fa-home" aria-hidden="true"></i>
+            <br />
+            <span class="p-0 m-0">Home</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/friend_request"
+            ><i class="fa fa-users" aria-hidden="true"></i>
+            <br />
+            <span class="p-0 m-0">Friend Request </span>
+            <% if(user.friendRequest.length){ %>
+            <span style="background: red;" class="badge badge-dark"
+              ><%= user.friendRequest.length%></span
+            >
+            <% } %>
+          </a>
+        </li>
+
+        <li class="nav-item  dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="/<%= user.username %>"
+            id="navbarDropdown"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            <img
+              class="navbarPhoto"
+              src="<%= user.photoLink %>"
+              alt="<%=user.name%>"
+            />
+            <br />
+            <span class="p-0 m-0"><%= user.name %></span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/user/<%= user.username %>"
+              >Profile</a
+            >
+            <a class="dropdown-item" href="/user/<%= user.username %>/#settings"
+              >Settings</a
+            >
+            <div class="dropdown-divider"></div>
+            <form action="/logout" method="post">
+              <input type="submit" class="dropdown-item" value="Log Out" />
+            </form>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Responsive nav bar -->
+
+<nav
+  class="main-mav-bar navbar navbar-expand-sm navbar-light bg-light shadow-sm fixed-top mobile-nav"
+>
+  <div style="display: flex;" class="mobile-nav-content">
+    <a class="navbar-brand" href="/"
+      ><img class="logo" src="/photos/logo.png" alt="Adda Golpo"
+    /></a>
+
+    <div style="flex: 1; padding-left: 10px;" class="search-bar">
+      <form action="/search" method="get">
+        <div class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search your friend"
+            name="user"
+            value="<%= typeof(searchName) !== 'undefined' ? searchName : '' %>"
+            required
+          />
+          <div class="input-group-append">
+            <button type="submit" class="btn btn-primary">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <div class="ml-auto profile-element">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/">
+            <i class="fa fa-home" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/friend_request"
+            ><i class="fa fa-users" aria-hidden="true"></i>
+            <% if(user.friendRequest.length){ %>
+            <span style="background: red;" class="badge badge-dark"
+              ><%= user.friendRequest.length%></span
+            >
+            <% } %>
+          </a>
+        </li>
+
+        <li class="nav-item  dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="/<%= user.username %>"
+            id="navbarDropdown"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            <img
+              class="navbarPhoto"
+              src="<%= user.photoLink %>"
+              alt="<%=user.name%>"
+            />
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/user/<%= user.username %>"
+              >Profile</a
+            >
+            <a class="dropdown-item" href="/user/<%= user.username %>/#settings"
+              >Settings</a
+            >
+            <div class="dropdown-divider"></div>
+            <form action="/logout" method="post">
+              <input type="submit" class="dropdown-item" value="Log Out" />
+            </form>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
